# primehack

./: README.md  package-lock.json
.github/workflows/: deploy.yaml
client/: .gitignore  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
client/src/: Home.tsx  index.css  index.tsx
client/src/bench/: Bench.tsx
client/src/spiral/: Spiral.tsx
client/src/test/: Test.tsx
scripts/: deploy.sh
server/: Cargo.toml
server/src/: main.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
