[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["tokio", "http1"] }
tokio = { version = "1.45.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["fs"] }  
num-traits = { version = "0.2", default-features = false }
num-bigint = { version = "0.4.6", default-features = false }