[package]
name = "wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.100"
num-prime = {version = "0.4.4", default-features = false, features = ["big-int"]}
num-traits = { version = "0.2", default-features = false }

# big-ints without std:
num-bigint = { version = "0.4.6", default-features = false }
getrandom = { version = "0.2.16", default-features = false, features = ["js"] }

